<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.com.cams7.marph</groupId>
	<artifactId>avaliacao-marph</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Avaliação Marph</name>
	<!--TODO Alterar a 'url' quando fazer o merge da branch 'as' com 'master'-->
	<url>https://github.com/cams7/avaliacao-marph/tree/as</url>
	<description>Avaliação para desenvolvedor Java</description>  	

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>

		<version.arquillian.container>8.2.1.Final</version.arquillian.container>

		<user.name>César Magalhães</user.name>
		<pula.teste_unitario>true</pula.teste_unitario>
	</properties>

	<modules>
		<module>common-lib</module>
		<module>app-jpa</module>
		<module>app-lib</module>
		<module>app-as</module>
		<module>app-cw</module>
	</modules>

	<repositories>
		<repository>
			<id>primefaces-repository</id>
			<name>Primefaces repository</name>
			<url>http://repository.primefaces.org</url>
		</repository>
	</repositories>

	<scm>
		<connection>scm:git:https://github.com/cams7/avaliacao-marph.git</connection>
	</scm>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>br.com.cams7.marph</groupId>
				<artifactId>common-lib</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>br.com.cams7.marph</groupId>
				<artifactId>app-jpa</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>br.com.cams7.marph</groupId>
				<artifactId>app-lib</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>br.com.cams7.marph</groupId>
				<artifactId>app-as-ejb</artifactId>
				<version>${project.version}</version>
				<type>ejb-client</type>
			</dependency>

			<!--dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>jboss-javaee-7.0-with-hibernate</artifactId>
				<version>8.2.2.Final</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency-->
			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>jboss-javaee-7.0-with-all</artifactId>
				<version>8.2.2.Final</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>6.9.10</version>
			</dependency>
			<dependency>
				<groupId>org.primefaces</groupId>
				<artifactId>primefaces</artifactId>
				<!--version>5.3</version -->
				<version>5.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.5.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<classpathPrefix />
							</manifest>
							<manifestEntries>
								<url>${pom.url}</url>
								<Implementation-Build>${buildNumber}</Implementation-Build>
								<Implementation-Title>${project.name}</Implementation-Title>
								<Implementation-Vendor>N/A</Implementation-Vendor>
								<Implementation-Version>${project.version}</Implementation-Version>
								<Built-By>${user.name}</Built-By>
								<Built-OS>${os.name}</Built-OS>
								<Build-Date>${timestamp}</Build-Date>
								<SCM>${buildNumber}</SCM>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<failOnMissingWebXml>true</failOnMissingWebXml>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<classpathPrefix />
							</manifest>
							<manifestEntries>
								<url>${pom.url}</url>
								<Implementation-Build>${buildNumber}</Implementation-Build>
								<Implementation-Title>${project.name}</Implementation-Title>
								<Implementation-Vendor>N/A</Implementation-Vendor>
								<Implementation-Version>${project.version}</Implementation-Version>
								<Built-By>${user.name}</Built-By>
								<Built-OS>${os.name}</Built-OS>
								<Build-Date>${timestamp}</Build-Date>
								<SCM>${buildNumber}</SCM>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.19.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<path>/avaliacao_marph</path>
						<update>true</update>
						<url>http://localhost:8080/manager/text</url>
						<username>tomcat</username>
						<password>tomcat</password>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>maven-jetty-plugin</artifactId>
					<version>6.1.25</version>
					<!--executions> <execution> <id>start-jetty</id> <phase>pre-integration-test</phase> 
						<goals> <goal>run-forked</goal> </goals> </execution> </executions -->
					<configuration>
						<jvmArgs>-Xmx2048m -Xms1536m -XX:PermSize=128m
							-XX:MaxPermSize=256m</jvmArgs>
						<scanIntervalSeconds>10</scanIntervalSeconds>
						<webApp>
							<contextPath>/</contextPath>
						</webApp>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.wildfly.plugins</groupId>
					<artifactId>wildfly-maven-plugin</artifactId>
					<version>1.0.2.Final</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>				
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.wildfly.plugins</groupId>
						<artifactId>wildfly-maven-plugin</artifactId>
						<configuration>
							<skip>true</skip>
						</configuration>
						<!--configuration> <jboss-home>/home/cesar/desenv/java/as/wildfly-10.0.0.Final</jboss-home> 
							</configuration> <executions> <execution> <phase>install</phase> <goals> 
							<goal>run</goal> <goal>deploy</goal> </goals> </execution> </executions -->
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>arq-wildfly-managed</id>
			<dependencies>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-arquillian-container-managed</artifactId>
					<version>${version.arquillian.container}</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>

		<profile>			
			<id>arq-wildfly-remote</id>
			<dependencies>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-arquillian-container-remote</artifactId>
					<version>${version.arquillian.container}</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
</project>
